# nugget

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.agent  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml  docker-setup.sh  main.py  model.md  proposal.md  pyproject.toml  test_curl.sh
.gitea/workflows/: build-images.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yml  test.yml
bench/: db.py  erd.md  ingest.py  run.py  schema.sql
bench/cases/: render_output.tsv  sinks.tsv  subagent.tsv
bench/fixtures/: mock_grep.py
blog/: output-routing-experiment.md
docker/: README.md
docker/config/: config.json.template
gemma/: __init__.py  __main__.py  approval.py  client.py  config.py  display.py  prompt.py
gemma/tools/: __init__.py  calculator.py  datetime_tool.py  filebrowser.py  memory.py  shell.py
planning/: CHANGELOG.md  README.md  audit.md  backlog.md  forced_thinking_probe.md  issue-1.md  issue-2.md  issue-3.md  next-sprint.md  profiles.md  roadmap.md  sprint-v0.3.md
src/nugget/: __init__.py  __main__.py  approval.py  commands.py  config.py  display.py  server.py  session.py  subagent.py
src/nugget/backends/: __init__.py  _routing.py  openrouter.py  textgen.py
src/nugget/templates/: system.j2
src/nugget/tools/: __init__.py  filebrowser.py  gotify.py  grep_search.py  http_fetch.py  jq.py  memory.py  render_output.py  shell.py  spawn_agent.py  tasks.py  wallabag.py  wolfram.py
src/nugget/web/: app.js  (+2 more)
tests/: conftest.py  test_approval.py  test_bench.py  test_config.py  test_session.py  test_subagent.py  test_subagent_e2e.py
tests/backends/: test_openrouter.py  test_textgen.py
tests/tools/: test_calculator.py  test_datetime_tool.py  test_filebrowser.py  test_grep_search.py  test_http_fetch.py  test_jq.py  test_memory.py  test_render_output.py  test_shell.py  test_spawn_agent.py  test_tasks.py
tool_docs/: CONFIG.md  SUBAGENT_SPEC.md  TOOL_SPEC.md  _bash_tool_template.py  ping_host.py
