[project]
name = "nugget"
version = "0.1.0"
description = "CLI chat interface for a locally-hosted model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "jinja2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[project.scripts]
nugget = "nugget.__main__:main"
