[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nugget"
version = "0.4.2"
description = "CLI chat interface for a locally-hosted model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "jinja2",
    "jmespath",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock", "mypy>=1.10"]
web = ["fastapi>=0.111", "uvicorn[standard]>=0.29"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nugget = ["templates/*.j2", "web/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[project.scripts]
nugget = "nugget.__main__:main"
nugget-server = "nugget.server:main"
